# pySMOKEPostProcessor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  KineticMechanism.py  LICENSE.md  README.md  environment-linux.yml  environment-macosx.yml  environment.yml  main.py  main_sens.py  prova.py  pySMOKEpostprocessor.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  test.yml  wheels_cibuildwheel.yml
c_interface/: c_interface.cpp  c_interface.h  c_utilities.cpp  c_utilities.h  definitions.h
c_interface/source/: PostProcessorFluxMap.h  ProfilesDatabase.hpp  ROPA.h  ROPA.hpp  Sensitivities.hpp  Utilities.h
cmake/: FindOpenSMOKEpp.cmake
cmake/examples/: cmake_settings.cmake  macosx-minimal.sh
conda.recipe/: environment-linux.yaml  environment-macosx.yaml  export_var.sh  meta.yaml
cpp_wrapper/: PostProcessorWrapper_py.cpp
cpp_wrapper/source/: PostProcessorFluxMap.h  ProfilesDatabase.h  ProfilesDatabase.hpp  ROPA.h  ROPA.hpp  Sensitivities.h  Sensitivities.hpp  Sensitivities_Database.hpp  Utilities.h
cxx_wrapper/: CMakeLists.txt  PostProcessorWrapper_py.cpp  PostProcessorWrapper_py.h
cxx_wrapper/source/: CMakeLists.txt  PostProcessorFluxMap.h  PostProcessorFluxMap.hpp  ProfilesDatabase.h  ProfilesDatabase.hpp  ROPA.h  ROPA.hpp  Sensitivities.h  Sensitivities.hpp  Sensitivities_Database.h  Sensitivities_Database.hpp  Utilities.h  Utilities.hpp
doc/: INSTALL.md  RELEASE.md
examples/: Classes.py  FluxAnalysis-01.ipynb  FluxAnalysis.ipynb  FluxAnalysis.py  FormationRates.ipynb  Formation_Rates.ipynb  Formation_Rates.py  Formation_Rates.py.ipynb  KineticMechanisms.py  ROPA+SENS.ipynb  ROPA-01.ipynb  ROPA-01.py  ROPA-01.py.ipynb  ROPA-02.ipynb  ROPA.ipynb  ROPA.py  ReactionClasses.ipynb  ReactionClasses.py  ReactionRates.ipynb  Reaction_Classes-Rates.ipynb  Reaction_Classes.ipynb  Reaction_Rates.ipynb  Reaction_Rates.py  Sensitivity-01.ipynb  Sensitivity-02.ipynb  Sensitivity-Coefficients.ipynb  Sensitivity.ipynb  Sensitivity_analysis.py  Sensitivity_coefficients.py  Stoichiometric Coefficients Visualization.ipynb  lib  main.py  main_sens.py  reaction_classes.py
examples/.ipynb_checkpoints/: ROPA+SENS-checkpoint.ipynb
examples/Figures/: .nfs0000000000e44a8c0005b81a
examples/ROPA-02/Kinetics/: kinetics.xml
examples/ROPA/Output/: Output.xml
examples/ROPA/kinetics/: kinetics.xml  reaction_names.xml
examples/Sensitivity/Output/: Output.xml  Sensitivities.H2.xml  Sensitivities.NO.xml  Sensitivities.temperature.xml
examples/Sensitivity/Output-02/: Sensitivities.xml
examples/Sensitivity/kinetics-OME/: kinetics.xml
examples/data/Classes/: rxn_class_groups.txt
examples/data/Classes/F26/: Output.xml
examples/data/Classes/kinetics-soot/: kinetics.CHEMKIN.CKI
examples/data/Classes/simul/: input.dic
examples/data/Classes/simul-batch/: input.dic
examples/data/Classes/simul3/: input.dic
examples/data/ROPA-02/Results/: input.dic
examples/data/Soot-01/: rxn_class_groups-soot.txt
examples/notebooks/: Cumulative-Rates.ipynb  FluxAnalysis.ipynb  Formation_Rates.ipynb  ROPA-01.ipynb  ROPA-02.ipynb  RateOfProductionAnalysis.ipynb  Reaction_Classes-Rates.ipynb  Reaction_Classes.ipynb  Reaction_Classes_FDI.ipynb  Reaction_Rates.ipynb  Reaction_Rates_byclass.ipynb  Sensitivity Analysis.ipynb  Sensitivity_Coefficients.ipynb
examples/python/: RateOfProductionAnalysis_1.py  ReactionRates.py  SensitivityAnalysis_1.py  flux.py
project/Linux/: Makefile.am  compile.sh  configure.ac  preconfigure.sh
project/MSVS_2019/: pyPostProcessor.sln  pyPostProcessor.vcxproj  pyPostProcessor.vcxproj.filters
project/Mac/: compile.sh
project/Mac-auto/: Makefile.am  configure.ac  preconfigure.sh
pySMOKEPostProcessor/: GraphWriter.py  KineticMechanism.py  RateOfProductionAnalysis.py  __init__.py  classproc.py  flux_analysis.py  graph_writer.py  postprocessor.py  postprocessor_backend.py  pySMOKEpostprocessor.py  reaction_classes.py  ropa.py  script_utils.py  sensitivity_analysis.py  simulation_utilities.py  utilities.py  utils.py
pySMOKEPostProcessor/amech_utils/: __init__.py  _format.py  find.py  pathtools.py  pattern.py  ptt.py
pySMOKEPostProcessor/c_interface/: PostProcessorFluxMap.hpp  ProfilesDatabase.hpp  Sensitivities.h  Utilities.h  c_interface.cpp  c_interface.h  definitions.h  sensitivities.cpp
pySMOKEPostProcessor/c_interface/source/: ProfilesDatabase.hpp  ROPA.hpp  Sensitivities.cpp  Sensitivities.h  Sensitivities.hpp  Sensitivities_Database.hpp  Utilities.cpp  Utilities.h  Utilities.hpp
pySMOKEPostProcessor/cxx_wrapper/: CMakeLists.txt  PostProcessorWrapper_py.cpp  PostProcessorWrapper_py.h
pySMOKEPostProcessor/cxx_wrapper/source/: PostProcessorFluxMap.h  PostProcessorFluxMap.hpp  ProfilesDatabase.h  ProfilesDatabase.hpp  ROPA.h  ROPA.hpp  Sensitivities.h  Sensitivities.hpp  Sensitivities_Database.h  Sensitivities_Database.hpp  Utilities.h  Utilities.hpp
pySMOKEPostProcessor/maps/: .OpenSMOKEppXMLFile.py.swp  KineticMap.py  OpenSMOKEppXMLFile.py  StoichiometricMap.py  __init__.py
pySMOKEPostProcessor/plots/: __init__.py  barplots.py  heatmaps.py
pySMOKEPostProcessor/plotting_utilities/: __init__.py  bar_plot.py  cumul_plot.py  heat_maps.py  styles.py
pySMOKEPostProcessor/reaction_classes_utilities/: __init__.py  reaction_classes.py  reaction_classes_calc.py  reaction_classes_groups.py
pySMOKEPostProcessor/rxnclass/: RxnClassGroups.py  __init__.py  rxnclass.py
pySMOKEPostProcessor/source/: PostProcessor.h  PostProcessor.hpp  ProfilesDatabase.h  ProfilesDatabase.hpp  ROPA.h  ROPA.hpp  Sensitivities.h  Sensitivities.hpp  Sensitivities_Database.h  main.cpp  newFluxMap.h  newFluxMap.hpp
scripts/: COMPILE_INSTALL.md  COMPILE_INSTALL_LINUX.md  build-cluster-Z3.sh  build-linux.sh  build-macosx.sh  fake-install.sh
source/: CollectionOfClasses.cpp  PostProcessor.cpp  PostProcessor.h  PostProcessor.hpp  ProfilesDatabase.h  ProfilesDatabase.hpp  ROPA.h  ROPA.hpp  Sensitivities.h  Sensitivities.hpp  Sensitivities_Database.h  Sensitivities_Database.hpp  Utilities.h  Utilities.hpp  compile.sh  main.cpp
(+14 files in other folders)
