# For the details see: https://github.com/pybind/cmake_example/blob/master/pyproject.toml
[project]
name = "pySMOKEPostProcessor"
version = "0.2.0"
authors = [
    {name = "Timoteo Dinelli", email = "timoteo.dinelli@polimi.it"},
    {name = "Luna Pratali Maffei", email = "lpratali@polimi.it"},
    {name = "Edoardo Ramalli", email = "edoardo.ramalli@polimi.it"},
    {name = "Andrea Nobili", email = "andrea.nobili@polimi.it"},
]
maintainers = [
    {name = "Timoteo Dinelli", email = "timoteo.dinelli@polimi.it"},
    {name = "Luna Pratali Maffei", email = "lpratali@polimi.it"},
]
description="Python wapper to the OpenSMOKEpp Graphical Post Processor"
readme = "README.md"
license = {file = "LICENSE.md"}
dependencies = ["numpy", "pandas", "pyarrow", "matplotlib", "networkx", "pydot", "graphviz", "scipy",]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://creckmodeling.chem.polimi.it/"
Repository = "https://github.com/Titodinelli/pySMOKEPostProcessor"
Issues = "https://github.com/tdinelli/pySMOKEPostProcessor/issues"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "Test*", "external*", "doc*", "__pycache__", "__pycache__*"]

[tool.mypy]
files = "setup.py"
python_version = "3.8"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true
