[project]
name = "pySMOKEPostProcessor"
version = "0.2.0"
authors = [
    {name = "Timoteo Dinelli", email = "timoteo.dinelli@polimi.it"},
    {name = "Luna Pratali Maffei", email = "lpratali@polimi.it"},
    {name = "Edoardo Ramalli", email = "edoardo.ramalli@polimi.it"},
    {name = "Andrea Nobili", email = "andrea.nobili@polimi.it"},
]
maintainers = [
    {name = "Timoteo Dinelli", email = "timoteo.dinelli@polimi.it"},
    {name = "Luna Pratali Maffei", email = "lpratali@polimi.it"},
]
description = "Python wrapper to the OpenSMOKEpp Graphical Post Processor"
readme = "README.md"
license = {file = "LICENSE.md"}
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "pyarrow>=6.0",
    "matplotlib>=3.3",
    "networkx>=2.5",
    "pydot>=1.4",
    "graphviz>=0.16",
    "scipy>=1.7",
]
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://creckmodeling.chem.polimi.it/"
Repository = "https://github.com/Titodinelli/pySMOKEPostProcessor"
Issues = "https://github.com/tdinelli/pySMOKEPostProcessor/issues"

[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11>=2.11.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.verbose = false
minimum-version = "0.8"
wheel.packages = ["pySMOKEPostProcessor"]
wheel.install-dir = "pySMOKEPostProcessor"
wheel.exclude = ["**.cpp", "**.hpp", "**.h", "**/CMakeLists.txt", "**/.git*"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_INTERFACE = "ON"
CMAKE_BUILD_TYPE = "Release"

[tool.mypy]
files = "pySMOKEPostProcessor"
python_version = "3.8"
strict = false
show_error_codes = true
warn_unreachable = true
ignore_missing_imports = true
